[tool.poetry]
name = "voting"
version = "0.1.0"
description = ""
authors = ["Joseph Kato <joseph@jdkato.io>"]

[tool.poetry.dependencies]
python = "^3.9"
tinydb = "^4.5.2"
streamlit = "^1.0.0"
opendatasets = "^0.1.20"
pandas = "^1.3.3"
camelot-py = "^0.10.1"
nameparser = "^1.0.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
watchdog = "^2.1.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
