[tool.poetry]
name = "voting"
version = "0.1.0"
description = ""
authors = ["Joseph Kato <joseph@jdkato.io>"]

[tool.poetry.dependencies]
python = "^3.9"
tinydb = "^4.5.2"
streamlit = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
watchdog = "^2.1.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
